Revision history for {{$dist->name}}

{{$NEXT}}
	Updates to the automatically-generated files
	Fix the handling of multi-line replies in exceptional circumstances
	Renamed public methods to private methods (should have been private in the first place!)

0.003	2011-05-04 21:39:47 UTC

	Minor pod tweaks

0.002	2011-05-03 20:10:11 UTC

	Add missing documentation for the rmdir command
	Add mdtm_parser to ::Utils for the MDTM command
	Add feat_parser to ::Utils for the FEAT command
	Add a test for the ::Utils module
	Improve the pod for commands with sample data
	Fix multi-line parsing logic so it correctly includes the first/last lines of the reply

0.001	2011-05-03 06:13:35 UTC

	initial release