@@ -4,6 +4,7 @@ Revision history for {{$dist->name}}
 	Updates to the automatically-generated files
 	Fix the handling of multi-line replies in exceptional circumstances
 	Renamed public methods to private methods (should have been private in the first place!)
+	Add the login banner to the authenticated event
 
 0.003	2011-05-04 21:39:47 UTC
 
